# esp32_rs485

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig
components/lvgl/: CMakeLists.txt  lv_conf.h
main/: CMakeLists.txt  idf_component.yml  lvgl_port.c  main.cpp  rs485_comm.c  rs485_comm.h  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
main/eez_ui/: eez-flow.cpp  fonts.h  screens.c  screens.h  ui.c
